--- a/src/style.css
+++ b/src/style.css
@@ -309,6 +309,9 @@ button:focus {
   justify-content: center !important;
   padding-top: 9em !important;
 }
+.mern-stack {
+  margin-top: 50px;
+}
 
 @media (max-width: 767px) {
   .myAvtar {
@@ -337,6 +340,7 @@ button:focus {
 }
 
 .home-about-social {
+  margin-top: 120px;
   text-align: center !important;
   padding-top: 25px;
   color: white !important;
@@ -463,7 +467,7 @@ button:focus {
   box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459) !important;
   color: white !important;
   background-color: transparent !important;
-  opacity: 0.9 !important;
+  /* opacity: 0.9 !important; */
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
 }
